[package]
name = "kingdom-api"
version = "0.1.0"
authors = ["rik0ch3t <rchett02@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]